# MetaNode-OS

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.base.json
.github/workflows/: launcher-release.yml
apps/distribution-api/: Dockerfile  package.json  tsconfig.json
apps/distribution-api/src/: index.ts
apps/gate-worker/: package.json  tsconfig.json  wrangler.jsonc
apps/gate-worker/src/: index.ts
apps/launcher/: index.html  package.json
apps/launcher/src/: main.ts  styles.css
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/src/: main.rs
docs/: credential-requirements.md  metanode-private-core-deployment.md  n8n-node-research.md
packaging/deb/: env  frostbyte-api.service  frostbyte-web.service  frostbyte-worker.service  postinst  prerm
scripts/: build-deb.ps1  build-deb.sh  build-windows-installer.ps1
