[package]
name = "metanode-launcher"
version = "0.1.0"
description = "MetaNode OS launcher"
authors = ["MetaNode OS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
ed25519-dalek = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
uuid = { version = "1", features = ["v4"] }
